--- a/src/components/style.css
+++ b/src/components/style.css
@@ -1,16 +1,18 @@
-*{
+* {
+    font-family: 'Bricolage Grotesque', sans-serif;
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: 'Bricolage Grotesque', sans-serif;
 }
-h1{
+
+h1 {
     font-size: 2.5em;
     font-weight: 400;
     color: hsl(0, 0%, 90%);
     text-align: center;
 }
-.btn{
+
+.btn {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -25,7 +27,8 @@ h1{
     transition: all 0.25s;
 
 }
-.btn-s{
+
+.btn-s {
     border-radius: 99px;
     border: 2px solid hsl(0, 0%, 20%);
     padding: 0.6em 1.2em;
@@ -37,33 +40,59 @@ h1{
     transition: border-color 0.25s;
 
 }
-.btn:hover{
+
+.btn:hover {
     color: hsl(0, 0%, 80%);
     background-color: hsl(0, 0%, 18%);
 }
-.btn-s:hover{
+
+.btn-s:hover {
     color: hsl(0, 0%, 80%);
     border-color: hsl(0, 0%, 18%);
 }
-body{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-.flex{
+
+.flex {
     display: flex;
     gap: 1rem;
 }
-.nav-bar{
+
+.nav-bar {
     display: flex;
     justify-content: space-between;
     align-items: center;
     height: 60px;
-    /* background-color: aqua; */
+    width: 80%;
 }
-.container{
-    width: 1280px;
-    height: 100vh;
-    background-color: blueviolet;
 
+.container {
+    width: calc(100vw - 0.5rem);
+    height: 100vh;
+    /* background-color: blueviolet; */
+    display: flex;
+    /* justify-content: center; */
+    align-items: center;
+    flex-direction: column;
+}
+
+.tab {
+    width: 80%;
+    height: 70px;
+    display: flex;
+    gap: 2rem;
+}
+
+.tab h2 {
+    font-weight: 400;
+}
+
+/* scroll bar */
+::-webkit-scrollbar {
+    width: 0.5rem;
+    color: red;
+    background: hsl(0, 0%, 20%);
+}
+
+::-webkit-scrollbar-thumb {
+    background: hsl(0, 0%, 30%);
+    border-radius: 99px;
 }
