--- a/src/components/style.css
+++ b/src/components/style.css
@@ -90,7 +90,6 @@ h1 {
 
 .tab {
     width: 80%;
-    height: 70px;
     display: flex;
     /* gap: 2rem; */
     display: flex;
@@ -103,6 +102,7 @@ h1 {
 }
 
 .options {
+    text-decoration: none;
     display: flex;
     justify-content: center;
     align-items: center;
